<resources>
    <string name="app_name">SPWallet</string>
    <string name="loginTitle1">Добро пожаловать в</string>
    <string name="loginTitle2">SPWallet</string>
    <string name="enterID">Введите ID:</string>
    <string name="enterTOKEN">Введите Токен:</string>
    <string name="yourID">Ваш ID</string>
    <string name="yourTOKEN">Ваш Токен</string>
    <string name="login">Войти</string>
    <string name="licenceInformation">Данное приложение не связано с Mojang Studios\n
        и SPworlds. Автор - MrKefish</string>
    <string name="playername">PlayerName</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="playerRole">PlayerRole</string>
    <string name="dayOfEntering">День входа:</string>
    <string name="numberOfCard">*****</string>
    <string name="cardname">cardName</string>
    <string name="countOfDO">***</string>
    <string name="DiamondOreShort">АР</string>
    <string name="playerCards">Карты игрока</string>
    <string name="cities">Города</string>
    <string name="playercity">playerCity</string>
    <string name="membe">• Я хз кто ты</string>
    <string name="error555">Эроррная 555</string>
    <string name="wallet">Кошелёк</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Загрузка…</string>
    <string name="transactionByNumberButton">Перевести\nпо номеру</string>
    <string name="noCardTokenInfo">Нет данных о токене карты</string>
    <string name="addToken">Добавить токен</string>
    <string name="transactionByNumber">Перевод по номеру карты</string>
    <string name="summa">Сумма</string>
    <string name="comment">Комментарий</string>
    <string name="numberOfReciever">Номер карты получателя</string>
    <string name="OK">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="addingTokenTo">Добавление токена к карте *****</string>
    <string name="cardToken">Токен карты</string>
    <string name="changeToken">Изменить токен</string>
    <string name="deleteToken">Удалить токен</string>
    <string name="delete">Удалить</string>
    <string name="deleteCardToken">Вы уверены, что хотите\nудалить токен карты *****?</string>
    <string name="transactionFailtureTitle">Оплата не прошла</string>
    <string name="transactionFailtureMessage">Попробуйте позже\nЕсли не помогло,\nнапишите MrKefish</string>
    <string name="errorIDK">Ошибка -1</string>
    <string name="sendAnonymous">Отправить анонимно</string>
    <string name="transactionDoneTitle">Оплата прошла</string>
    <string name="walletTransactionDoneMessage">Перевод null\n*** Ар</string>
    <string name="accountTransaction">Между счетами</string>
    <string name="cardTools">Действия с картой</string>
    <string name="autoTransactions">Автопереводы</string>
    <string name="noAutoTransactions">Нет автопереподов</string>
    <string name="transactionProfiles">Профили\nоплаты</string>
    <string name="accountTransactionTitle">Перевод между счетами</string>
    <string name="settings">Настройки</string>
    <string name="settingsUiTitle">Графический интерфейс</string>
    <string name="whiteTheme">Светлая тема</string>
    <string name="settingsUiProfileImage">Фото профиля</string>
    <string name="settingsUiProfileInfo">Информация о профиле</string>
    <string name="settingsUiProfileTitle">Владка аккаунт</string>
    <string name="settingsUiProfileCities">Города пользователя</string>
    <string name="experiments">Эксперименты</string>
    <string name="noName">Без имени</string>
    <string name="noInfo">Нет информации</string>
    <string name="transactionProfilesOneLine">Профили оплаты</string>
</resources>