<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rounded_account_circle"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="end"
            android:id="@+id/profileImageSettingsFragment"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="37sp"
            android:textColor="@color/white"
            android:layout_marginStart="30dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_cards"
            android:id="@+id/settingsUiAccountLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/settingsUiProfileTitle"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:id="@+id/settingsUiProfileTitle"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settingsUiProfileTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/settingsUiProfileImage"
                android:textColor="#E6E6E6"
                android:textSize="17sp"
                android:checked="true"
                android:id="@+id/settingsUiProfileImage"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settingsUiProfileImage"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:text="@string/settingsUiProfileInfo"
                android:textColor="#E6E6E6"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:checked="true"
                android:id="@+id/settingsUiProfileInfo"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settingsUiProfileInfo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:text="@string/settingsUiProfileCities"
                android:textColor="#E6E6E6"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:id="@+id/settingsUiProfileCities"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_cards"
            android:id="@+id/settingsUiLayout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsUiTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/settingsUiTitle"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settingsUiExperiments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/whiteTheme"
                android:textColor="#E6E6E6"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:textSize="17sp"
                android:id="@+id/settingsUiWhiteTheme"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/settingsUiTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/experiments"
                android:textColor="#E6E6E6"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:textSize="17sp"
                android:id="@+id/settingsUiExperiments"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>