<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialogBackground"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addingTokenTo"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/walletAddTokenTitle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/walletAddTokenEnter"
        android:background="#00000000"
        android:drawableTop="@drawable/rounded_close"
        android:id="@+id/walletAddTokenCloseButton"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/walletAddTokenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:hint="@string/cardToken"
        android:textSize="20sp"
        android:padding="30sp"
        android:id="@+id/walletAddTokenEnter" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/walletAddTokenEnter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_button"
            android:text="@string/cancel"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:id="@+id/walletAddTokenButtonCancel" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ok_button"
            android:text="@string/OK"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:id="@+id/walletAddTokenButtonOk" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>