<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:cacheColorHint="#00000000"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:cacheColorHint="#00000000"
        android:orientation="horizontal">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/cards_blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardNumber"
                app:layout_constraintBottom_toBottomOf="@id/cardImage"
                app:layout_constraintEnd_toEndOf="@id/cardImage"
                android:text="@string/numberOfCard"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/cardNameAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardname"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_margin="10dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bounds_blured_text"
                    android:text="@string/countOfDO"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DiamondOreShort"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>